*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9307 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -294,6 +294,7 @@ module.TeamPopupLinks.LastLineup.desc=Sidste holdopstilling
 module.TeamPopupLinks.NextMatch.desc=Næste Kamp
 module.TeamPopupLinks.AddNextMatch.desc=Tilføjer næste kamp til HT Live
 module.TeamPopupLinks.YouthMatches.desc=Ungdomskampe
+module.TeamPopupLinks.Tournaments.desc=Turneringer
 module.TeamPopupLinks.Coach.desc=Træner
 module.TeamPopupLinks.CustomLink.desc=Brugerdefinerede links i adskilte linjer. Tags som [BrugerID] og [HoldID] vil blive erstattet af de faktiske id'er. Eksempel\: {"link"\:"http\://example.com/[holdid]", "Titel"\: "eksempel link", "mere"\: falsk, "nyTab"\: sandt}
 module.SkillColoring.desc=Bedre visualisering af evner
@@ -391,6 +392,8 @@ module.PlayerStatsExperience.desc=Viser erfaring underniveau på spillere statis
 
 
 # IN-GAME STRINGS. translate first
+
+#Youth-Twins
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Han har allerede indsamlet mellem %1 og %2 ud af 28 rutine points. Hans erfaring er mellem %3 og %4.
@@ -918,6 +921,7 @@ NextMatch=Næste kamp
 AddNextMatch=Tilføj næste kamp til HT Live
 LastLineup=Sidste opstilling
 YouthMatches=Ungdomskampe
+Tournaments=Turneringer
 more=Mere...
 less=mindre...
 
