--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -295,6 +295,7 @@ module.TeamPopupLinks.LastLineup.desc=Link zur letzten Aufstellung
 module.TeamPopupLinks.NextMatch.desc=Link zum nächsten Spiel
 module.TeamPopupLinks.AddNextMatch.desc=Hinzufügen des nächsten Spiels zu HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Link zu den Jugendspielen
+module.TeamPopupLinks.Tournaments.desc=Turniere
 module.TeamPopupLinks.Coach.desc=Link zum Trainer
 module.TeamPopupLinks.CustomLink.desc=Eigene Links in getrennten Zeilen. Die Tags [UserID] und [TeamID] werden automatisch durch die tatsächlichen IDs ersetzt. Beispiel\: {"link"\:"http\://example.com/[teamid]", "title"\:"BeispielTitle", "more"\: false, "newTab"\:true}
 module.SkillColoring.desc=Skills farblich hervor heben bzw. mit Zahlenwert darstellen
@@ -392,6 +393,8 @@ module.PlayerStatsExperience.desc=Sublevel der Erfahrung auf der Spielerstatisti
 
 
 # IN-GAME STRINGS. translate first
+
+#Youth-Twins
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Von 28 erforderlichen Punkten hat er mittlerweile %1 bis %2 gesammelt. Seine Erfahrung liegt zwischen %3 und %4.
@@ -919,6 +922,7 @@ NextMatch=nächstes Spiel
 AddNextMatch=nächstes Spiel hzfg.
 LastLineup=Letzte Aufstellung
 YouthMatches=Jugendspiele
+Tournaments=Turniere
 more=mehr...
 less=weniger...
 
