--- a/content/locale/eu/foxtrick.properties
+++ b/content/locale/eu/foxtrick.properties
@@ -37,6 +37,8 @@ pluralFormRuleID=pluralFormRule1
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
 
 #Series statistics
