--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -383,6 +383,8 @@ module.RatingsDisplay.HatStats.desc=Hatstatteina
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceChange.title=Kokemusnousu
 PlayerStatsExperience.ExperienceChange.title.abbr=kok+
