--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -294,6 +294,7 @@ module.TeamPopupLinks.LastLineup.desc=Dernière composition de l'équipe
 module.TeamPopupLinks.NextMatch.desc=Prochain match
 module.TeamPopupLinks.AddNextMatch.desc=Ajouter le prochain match à HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Matchs équipe junior
+module.TeamPopupLinks.Tournaments.desc=Tournois
 module.TeamPopupLinks.Coach.desc=Entraineur
 module.TeamPopupLinks.CustomLink.desc=Liens personnalisés \: Les balises [UserID] et [TeamID] seront remplacées par l'ID réel. Exemple\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 module.SkillColoring.desc=Meilleure visualisation des compétences
@@ -391,6 +392,8 @@ module.PlayerStatsExperience.desc=Les points d'expérience acquis s'affichent su
 
 
 # IN-GAME STRINGS. translate first
+
+#Youth-Twins
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Il a déjà accumulé entre %1 et %2 des 28 points d'expérience requis. Son niveau d'expérience se situe entre %3 et %4.
@@ -918,6 +921,7 @@ NextMatch=Prochain match
 AddNextMatch=Ajouter le prochain match à HT-Live
 LastLineup=Dernière composition de l'équipe
 YouthMatches=Matchs Équipe junior
+Tournaments=Tournois
 more=plus...
 less=moins...
 
