--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -295,6 +295,7 @@ module.TeamPopupLinks.LastLineup.desc=Link na posljednju postavu
 module.TeamPopupLinks.NextMatch.desc=Link na sljedeću utakmicu
 module.TeamPopupLinks.AddNextMatch.desc=Dodati sljedeću utakmicu na HT-live
 module.TeamPopupLinks.YouthMatches.desc=Link na utakmice juniora
+module.TeamPopupLinks.Tournaments.desc=Turniri
 module.TeamPopupLinks.Coach.desc=Link na Trenera
 module.TeamPopupLinks.CustomLink.desc=Osobni linkovi u zasebnim redovima. Tagovi [UserID] i [TeamID] će biti zamijenjeni s pravim ID-om.
 module.SkillColoring.desc=Napredni prikaz vještina u bojama
@@ -392,6 +393,8 @@ module.PlayerStatsExperience.desc=Pokazuje podrazinu iskustva na igračevoj stra
 
 
 # IN-GAME STRINGS. translate first
+
+#Youth-Twins
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Već je prikupio između %1 i %2 od 28 iskustvenih bodova. Njegovo iskustvo je između %3 i %4.
@@ -919,6 +922,7 @@ NextMatch=Sljedeća utakmica
 AddNextMatch=Dodaj sljedeću utakmicu u HT-live
 LastLineup=Posljednja postava
 YouthMatches=Utakmice juniora
+Tournaments=Turniri
 more=više...
 less=manje...
 
