--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -130,6 +130,7 @@ module.LinksAchievements.desc=Toon een aantal nuttige externe links op de mijlpa
 module.LinksStaff.desc=Toon een aantal nuttige externe links op de stafpagina
 module.LinksTracker.desc=Toon een aantal zogenaamde tracker links naar de bijbehorende NT en spelerspagina's
 module.LinksClubTransfers.desc=Toon een aantal nuttige externe links op de transferpagina van een club
+module.LinksWorld.desc=Voeg externe links toe aan de Wereld pagina
 module.LoyaltyDisplay.desc=Benadruk het effect van loyaliteit en moederclub bonus op de individuele speler's pagina. (Werkt alleen als "Laat skill bars zien"-optie aan staat in Hattrick's website voorkeuren)
 module.ForumAlterHeaderLine.desc=Wijzig de berichtkop
 module.Singleline2.desc=Alternatieve éénregelige berichtkop. Iets sneller dan de andere versies. Schakelt aantal conflicterende forum modules uit.
@@ -295,6 +296,7 @@ module.TeamPopupLinks.LastLineup.desc=Link naar laatste opstelling
 module.TeamPopupLinks.NextMatch.desc=Link naar de volgende wedstrijd
 module.TeamPopupLinks.AddNextMatch.desc=Voeg volgende wedstrijd toe aan HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Link naar de jeugdwedstrijden
+module.TeamPopupLinks.Tournaments.desc=Toernooien
 module.TeamPopupLinks.Coach.desc=Link naar trainer
 module.TeamPopupLinks.CustomLink.desc=Aangepaste koppelingen op aparte regels. De tags [UserID] en [TeamID] zullen worden vervangen door de werkelijke id's. Voorbeeld\: {"link"\:"http\://example.com/[teamid]", "titel"\: "voorbeeld-link", "meer"\: false, "newTab"\: true}
 module.SkillColoring.desc=Betere visualisatie van vaardigheden en gradaties
@@ -393,7 +395,14 @@ module.PlayerStatsExperience.desc=Geeft de ervaring subskill op de playerStats p
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=Hij heeft al tussen de %1 en de %2 van 28 ervaringspunten vergaard. Zijn ervaring zit tussen %3 en %4.
+PlayerStatsExperience.NotAllMatchesVisible=The echte waarde kan hoger zijn, omdat niet alle wedstrijden te zien zijn.
+PlayerStatsExperience.NoSkillUpFound=De echte waarde kan hoger zijn omdat er geen ervaringsniveau verhogingen gevonden zijn.
+PlayerStatsExperience.ExperienceChange.title=Vergaarde ervaring
+PlayerStatsExperience.ExperienceChange.title.abbr=XP+
 
 #Series statistics
 rating.average=Gemiddelde rating
@@ -598,8 +607,17 @@ matchOrder.options=Opties
 matchOrder.staminaDiscount=Conditie correctie
 matchOrder.staminaDiscount.title=Sector ratings worden verdisconteerd op basis van spelers' bijdrage aan deze sector
 matchOrder.attVsDef=Aanval vs. verdediging
+matchOrder.attVsDef.title=Toon de ratings van de tegenstander als òf aanval-vs-verdediging òf aanval-vs-aanval
 matchOrder.summary=Samenvatting
 matchOrder.tournamentMatch=Toernooi wedstrijd
+matchOrder.homeAway=Auto-detect, voeg thuis of uitspelend team toe?
+matchOrder.homeAway.abbr=T/U
+matchOrder.default=Standaard
+matchOrder.default.abbr=S
+matchOrder.home=Thuis
+matchOrder.home.abbr=T
+matchOrder.away=Uit
+matchOrder.away.abbr=U
 
 #Skills
 Playmaking=Positiespel
@@ -905,6 +923,7 @@ NextMatch=Volgende wedstrijd
 AddNextMatch=Voeg volgende wedstrijd toe aan HT Live
 LastLineup=Laatste opstelling
 YouthMatches=Jeugdwedstrijden
+Tournaments=Toernooien
 more=meer...
 less=minder...
 
