--- a/content/locale/nn-NO/foxtrick.properties
+++ b/content/locale/nn-NO/foxtrick.properties
@@ -285,6 +285,8 @@ module.TableSort.desc=Gjer at alle 'skikkelege' tabellar sorterbare som har ei o
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
 
 #Series statistics
