--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -393,6 +393,8 @@ module.PlayerStatsExperience.desc=Afișează subskill-ul experienței pe pagina 
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=El deja a colectat între %1 și %2 din 28 puncte de experiență. Experiența lui este între %3 și %4.
 PlayerStatsExperience.NotAllMatchesVisible=Valoarea actuală ar putea fi mai mare deoarece nu toate meciurile sunt afișate.
