--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -274,6 +274,8 @@ module.TableSort.desc=Làm cho tất cả các bảng  'hợp lệ' có thể ph
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
 
 #Series statistics
