--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -159,6 +159,8 @@ module.RapidId.desc=Зручнае поле ўводу наверсе старо
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
 
 #Series statistics
