--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -381,6 +381,8 @@ module.RatingsDisplay.HatStats.desc=Jako HatStats
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
 
 #Series statistics
