--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -395,6 +395,13 @@ module.PlayerStatsExperience.desc=Displays the experience subskill on the player
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+YouthTwins.possibleTwins=This player has %1 possible twin.;This player has %1 possible twins.
+YouthTwins.markedTwins=Marked as twin\: %1
+YouthTwins.nonTwins=Marked as non-twin\: %1
+YouthTwins.undecidedTwins=Not yet marked\: %1
+YouthTwins.nonHyUser=You could find out more about his potential by using hattrick youthclub.
+
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=He already collected between %1 and %2 of 28 experience points. His experience is between %3 and %4.
 PlayerStatsExperience.NotAllMatchesVisible=The actual value might be higher because not all matches are displayed.
