--- a/content/locale/et/foxtrick.properties
+++ b/content/locale/et/foxtrick.properties
@@ -67,6 +67,8 @@ module.MatchOrderInterface.Specialties.desc=Kuva mängijate erioskusi
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
 
 #Series statistics
