--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -394,6 +394,8 @@ module.PlayerStatsExperience.desc=Rodyti patirties polygmenį pasirodymų istori
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
 
 #Series statistics
