--- a/content/locale/zh-CN/foxtrick.properties
+++ b/content/locale/zh-CN/foxtrick.properties
@@ -341,6 +341,8 @@ module.MobileEnhancements.desc=优化在移动设备上的显示
 
 # IN-GAME STRINGS. translate first
 
+#Youth-Twins
+
 #PlayerStatsExperience
 
 #Series statistics
