--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -389,6 +389,7 @@ module.RatingsDisplay.HatStats.desc=Хатстатс
 module.RatingsDisplay.HTSums.desc=Хеттрик збирне оцене
 module.SafeForWork.desc=Замењује фавикон и Хеттрик наслов у отвореним табовима да би вашем шефу било мање сумњиво. Најбоље да искључите и друге модуле који вас могу компромитовати, нарочито модуле за обавештења.
 module.PlayerStatsExperience.desc=Приказује и подниво искуства за играча на страници Историје наступа
+module.YouthTwins.desc=Приказује број могућих близанаца у сарадњи са 'hattrick youthclub' алатом. Није потребно да имате отворен налог на 'hattrick youthclub' да би сте користили овај модул. Пошто су елементи слике играча најважнији за детекцију близанаца ова опција је употребљива само за Хеттрик супортере.
 # ----------------------------------------------------------------------------
 
 
