Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9316 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -397,7 +397,7 @@ module.YouthTwins.desc=Приказује број могућих близана
 
 #Youth-Twins
 YouthTwins.possibleTwins=Овај играч има %1 могућег близанца.;Овај играч има %1 могућа близанца.;Овај играч има %1 могућих близанаца.
-YouthTwins.markedTwins=Број маркираних блиѕанаца: %1
+YouthTwins.markedTwins=Број већ маркираних близанаца: %1
 YouthTwins.nonTwins=Број маркираних који немају близанца: %1
 YouthTwins.undecidedTwins=Још увек немаркирани ирачи: %1
 YouthTwins.nonHyUser=Можете сазнати више о потенцијалу овог играча уколико користите 'hattrick youthclub'.
