*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9319 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -394,9 +394,14 @@ module.PlayerStatsExperience.desc=Viser erfaring underniveau på spillere statis
 # IN-GAME STRINGS. translate first
 
 #Youth-Twins
+YouthTwins.possibleTwins=Denne spiller har %1 muligt tvilling.;Disse spillere har %1 mulige tvillinger.
+YouthTwins.markedTwins=Markeret som tvilling\: %1
+YouthTwins.nonTwins=Markeret som ikke-tvilling\: %1
+YouthTwins.undecidedTwins=Endnu ikke markeret\: %1
+YouthTwins.nonHyUser=Du kan finde ud af mere om hans potentiale ved hjælp af hattrick youthclub.
 
 #PlayerStatsExperience
-PlayerStatsExperience.ExperienceText=Han har allerede indsamlet mellem %1 og %2 ud af 28 rutine points. Hans erfaring er mellem %3 og %4.
+PlayerStatsExperience.ExperienceText=Han har allerede indsamlet mellem %1 og %2 ud af 28 rutine points. Hans rutine er mellem %3 og %4.
 PlayerStatsExperience.NotAllMatchesVisible=Den faktiske værdi kan være højere, fordi alle kampe vises ikke.
 PlayerStatsExperience.NoSkillUpFound=Den faktiske værdi kan være højere, fordi ingen rutine stigning blev fundet.
 PlayerStatsExperience.ExperienceChange.title=Rutine gevinst
@@ -431,7 +436,7 @@ HistoryStats.cupwinner.short=CV
 
 # YouthPromotes
 #following string uses pluralForms
-YouthPromotes.future=Spilleren kan blive forfremmet %1 dag senere, på %2.;Spilleren kan blive forfremmet %1 dage senere på %2.
+YouthPromotes.future=Spilleren kan blive forfremmet %1 dag senere, d. %2.;Spilleren kan blive forfremmet %1 dage senere d. %2.
 YouthPromotes.today=Spiller kan rykkes op i dag\!
 
 #teamstats+filters
@@ -703,7 +708,7 @@ PlayerNumber=Spiller nummer
 PlayerNumber.abbr=\#
 TSI=Total Skill Index
 TSI.abbr=TSI
-CanBePromotedIn=Kan rykkes op om
+CanBePromotedIn=Kan rykkes op om,dag(e)
 CanBePromotedIn.abbr=opryk
 Personality=Personlighed
 Agreeability=Omgængelighed
@@ -820,13 +825,13 @@ links.custom.confirmremove=Sikker på at fjerne?
 links.custom.addtag=Tilføj et Tag
 links.custom.tags=Tags
 links.custom.help=Hjælp
-links.custom.helptext=For det første, dette er blot redigerings tilstand. Hvis du klikker på overskriften af denne boks, skifter du mellem normal og redigerings tilstand.De links to tilføjer virker kun i normal tilstand. Eksterne statiske links er nemt at tilføje, du skal blot tilføje den fulde URL (eks\: http\://example.org/league/427/). For interne statiske links spring serverdelen over  (Eks\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Du behøver kun tags for sjældne dynamiske links. Med tags, ændres links dynamisk ved hjælp af information om den side du er på.For eksempel For example http\://example.org/league/[LeagueID]vil altid føre dig til den side i serien med den pågældende ID, som du netop ser i Hattrick. De tags, der er tilgængelige på hver side er angivet i tilvalgs-boksen.Du kan kun bruge dem, der er noteret på den side, hvor du tilføjer brugerdefinerede link. Teksten i boksen er blot et udsnit af skabelonen.Du kan skrive et tag selv (ved hjælp af []).\n
+links.custom.helptext=For det første, dette er blot redigerings tilstand. Hvis du klikker på overskriften af denne boks, skifter du mellem normal og redigerings tilstand. De links to tilføjer virker kun i normal tilstand. Eksterne statiske links er nemt at tilføje, du skal blot tilføje den fulde URL (eks\: http\://example.org/league/427/). For interne statiske links spring serverdelen over  (Eks\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Du behøver kun tags for sjældne dynamiske links. Med tags, ændres links dynamisk ved hjælp af information om den side du er på.For eksempel http\://example.org/league/[LeagueID]vil altid føre dig til den side i serien med den pågældende ID, som du netop ser i Hattrick. De tags, der er tilgængelige på hver side er angivet i tilvalgs-boksen.Du kan kun bruge dem, der er noteret på den side, hvor du tilføjer brugerdefinerede link. Teksten i boksen er blot et udsnit af skabelonen.Du kan skrive et tag selv (ved hjælp af []).
 links.custom.helptext2=Du kan også dele og eksportere dine links. Klik på Eksportér og vælge en fil for at gemme linket. Links er knyttet til den fil, dermed kan du gemme flere links i én fil. For at importere links skal du gå til import afsnit i indstillingerne. Kun poster i den valgte fil vil blive importeret, som i dette tilfælde er dine links. Ingen af ​​dine eksisterende links vil blive slettet.
 
 #following string uses pluralForms
 notify.newMail=Du har modtaget %s ny mail.;Du har modtaget %s nye mails.
 #following string uses pluralForms
-notify.newForumMessage=Der er %s ny forum svar til dig.;Der er %s nye forum svar til dig.
+notify.newForumMessage=Der er %s ny forum besked til dig.;Der er %s nye forum beskeder til dig.
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
