--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -390,6 +390,7 @@ module.RatingsDisplay.HatStats.desc=As HatStats
 module.RatingsDisplay.HTSums.desc=As Hattrick ratings sums
 module.SafeForWork.desc=Replaces icon and title text of Hattrick tabs
 module.PlayerStatsExperience.desc=Displays the experience subskill on the playerStats page
+module.YouthTwins.desc=Displays the amount of possible twins for your youth players in conjunction with hattrick youthclub. You don't need to have a hattrick youthclub account to use this module. Since knowledge about the player faces is crucial for twin detection this feature is only useful for supporters.
 # -----------------------------------------------------------------------------
 
 
