--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -294,6 +294,7 @@ module.TeamPopupLinks.LastLineup.desc=Enlace a la Última Alineación
 module.TeamPopupLinks.NextMatch.desc=Enlace al próximo partido
 module.TeamPopupLinks.AddNextMatch.desc=Añadir próximo partido a HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Enlace a los partidos juveniles
+module.TeamPopupLinks.Tournaments.desc=Torneos
 module.TeamPopupLinks.Coach.desc=Enlace al entrenador
 module.TeamPopupLinks.CustomLink.desc=Vínculos personalizados en lineas separadas. Los tags [UserID] y [TeamID] serán reemplazados con los IDs reales. Por ejemplo\: {"vínculo"\:"http\://example.com/[TeamID]", "título"\:"vínculo de ejemplo"}
 module.SkillColoring.desc=Mejor visualización de las habilidades
@@ -920,6 +921,7 @@ NextMatch=Próximo partido
 AddNextMatch=Añadir próximo partido a HT-Live
 LastLineup=Última Alineación
 YouthMatches=Partidos Juveniles
+Tournaments=Torneos
 more=más...
 less=menos...
 
