--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -394,6 +394,11 @@ module.PlayerStatsExperience.desc=Les points d'expérience acquis s'affichent su
 # IN-GAME STRINGS. translate first
 
 #Youth-Twins
+YouthTwins.possibleTwins=Ce joueur a %1 possible doublon.;Ce joueur a %1 possibles doublons.
+YouthTwins.markedTwins=Signalé comme doublon \: %1
+YouthTwins.nonTwins=Signalé comme non-doublon \: %1
+YouthTwins.undecidedTwins=Pas encore signalé \: %1
+YouthTwins.nonHyUser=Vous pourriez en savoir plus sur son potentiel sur hattrick youthclub.
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Il a déjà accumulé entre %1 et %2 des 28 points d'expérience requis. Son niveau d'expérience se situe entre %3 et %4.
