--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -396,6 +396,11 @@ module.PlayerStatsExperience.desc=Geeft de ervaring subskill op de playerStats p
 # IN-GAME STRINGS. translate first
 
 #Youth-Twins
+YouthTwins.possibleTwins=Deze speler heeft %1 mogelijke tweeling.;Deze speler heeft %1 mogelijke meerlingen.
+YouthTwins.markedTwins=Gemarkeerd als tweeling\: %1
+YouthTwins.nonTwins=Niet gemarkeerd als tweeling\: %1
+YouthTwins.undecidedTwins=Nog niet gemarkeerd\: %1
+YouthTwins.nonHyUser=Je kunt meer informatie over deze jeugdspeler vinden via Hattrick Youthclub.
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Hij heeft al tussen de %1 en de %2 van 28 ervaringspunten vergaard. Zijn ervaring zit tussen %3 en %4.
