--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -395,6 +395,11 @@ module.PlayerStatsExperience.desc=Sublevel der Erfahrung auf der Spielerstatisti
 # IN-GAME STRINGS. translate first
 
 #Youth-Twins
+YouthTwins.possibleTwins=Dieser Spieler hat %1 potenziellen Zwilling.; Dieser Spieler hat %1 potenzielle Zwillinge.
+YouthTwins.markedTwins=Als Zwilling markiert\: %1
+YouthTwins.nonTwins=Als Nicht-Zwilling markiert\: %1
+YouthTwins.undecidedTwins=Noch nicht markiert\: %1
+YouthTwins.nonHyUser=Wenn du hattrick youthclub benutzen würdest könntest du mehr über sein Potential erfahren.
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Von 28 erforderlichen Punkten hat er mittlerweile %1 bis %2 gesammelt. Seine Erfahrung liegt zwischen %3 und %4.
