*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9321 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -388,12 +388,18 @@ module.RatingsDisplay.HatStats.desc=Como HatStats
 module.RatingsDisplay.HTSums.desc=Como sumas de calificaciones de Hattrick
 module.SafeForWork.desc=Remplazar iconos y el texto del título de las pestañas de Hattrick
 module.PlayerStatsExperience.desc=Muestra el subnivel de experiencia en la página playerStats
+module.YouthTwins.desc=Muestra la cantidad de gemelos posibles en tu equipo de juveniles en conjunción con hattrick youthclub. No se necesita tener una cuenta en hattick youthclub para usar este módulo. Debido a que es crucial conocer la cara de los jugadores para la detección de los gemelos, ésta característica es sólo útil para los supporters.
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Youth-Twins
+YouthTwins.possibleTwins=Este jugador tiene %1 gemelo posible.;Este jugador tiene %1 gemelos posibles.
+YouthTwins.markedTwins=Marcado como gemelo\: %1
+YouthTwins.nonTwins=Marcado como no-gemelo\: %1
+YouthTwins.undecidedTwins=Aún no se ha marcado\: %1
+YouthTwins.nonHyUser=Podes averiguar mas acerca del potencial usando hattrick youthclub.
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Ya ganó entre %1 y %2 de 28 puntos de experiencia. Su experiencia está entre %3 y %4.
