--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -389,12 +389,18 @@ module.RatingsDisplay.HatStats.desc=Kao HatStats
 module.RatingsDisplay.HTSums.desc=Zbroj ocjena kao u Hattricku
 module.SafeForWork.desc=Zamjenjuje ikonu i naslovni tekst Hattrickovih kartica
 module.PlayerStatsExperience.desc=Pokazuje podrazinu iskustva na igračevoj stranici
+module.YouthTwins.desc=Prikazuje broj potencijalnih blizanaca vaših juniora u suradnji s hattrick youthclubom. Ne morate imati račun na hattrick youthclubu da biste koristili ovu opciju. S obzirom da je znanje o igračevom izgledu nužno za prepoznavanje blizanaca, ova opcija je korisna samo za supportere.
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Youth-Twins
+YouthTwins.possibleTwins=Ovaj igrač ima %1 mogućeg blizanca.;Ovaj igrač ima %1 mogućih blizanaca.
+YouthTwins.markedTwins=Označen kao blizanac\: %1
+YouthTwins.nonTwins=Označen kao ne-blizanac\: %1
+YouthTwins.undecidedTwins=Još nije označen\: %1
+YouthTwins.nonHyUser=Možete saznati više o njegovom potencijalu koristeći hattrick youthclub.
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Već je prikupio između %1 i %2 od 28 iskustvenih bodova. Njegovo iskustvo je između %3 i %4.
