--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -389,13 +389,14 @@ module.RatingsDisplay.HatStats.desc=HatStats
 module.RatingsDisplay.HTSums.desc=Hattrick 레이팅 합계로서
 module.SafeForWork.desc=Hattrick 탭의 아이콘과 제목을 교체
 module.PlayerStatsExperience.desc=선수 활약상 페이지에 경험 subskill을 표시합니다
+module.YouthTwins.desc=hattrick youthclub과 연계하여 당신의 유소년 선수의 쌍둥이 수를 표시합니다. 이 모듈을 사용하기 위해서 hattrick youthclub 계정을 가질 필요는 없습니다. 쌍둥이 탐색하는데 선수 얼굴 정보가 중요하기 때문에 이 기능은 서포터에게만 유용합니다.
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Youth-Twins
-YouthTwins.possibleTwins=이 선수는 %1 명의 쌍둥이를 가질 가능성을 가졌습니다.;이 선수는 %1 명의 쌍둥이를 가질 가능성을 가졌습니다.
+YouthTwins.possibleTwins=이 선수는 %1 명의 쌍둥이를 가질 가능성을 가졌습니다.
 YouthTwins.markedTwins=쌍둥이로 표시\: %1
 YouthTwins.nonTwins=쌍둥이가 아님으로 표시\: %1
 YouthTwins.undecidedTwins=아직 표시하지 않음\: %1
@@ -800,9 +801,9 @@ Deadline.abbr=마감
 CurrentBid=현재 입찰가
 CurrentBid.abbr=가격
 CurrentBidder=현재 가장 높은 입찰자
-CurrentBidder.abbr=입찰자
+CurrentBidder.abbr=입찰
 CurrentBidderShort=현재 가장 높은 입찰자
-CurrentBidderShort.abbr=입찰자
+CurrentBidderShort.abbr=입찰
 
 skilltable.youthplayer=유소년선수
 skilltable.rebought_youthplayer=재구매한 유소년선수
@@ -1027,12 +1028,12 @@ team.status.booked=친선 예약됨
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
 #next 6 use pluralFroms
-datetimestrings.days=일;일
-datetimestrings.hours=시;시
-datetimestrings.minutes=분;분
-datetimestrings.short_seasons=s;s
-datetimestrings.short_weeks=wk;wk
-datetimestrings.short_days=d;d
+datetimestrings.days=일
+datetimestrings.hours=시
+datetimestrings.minutes=분
+datetimestrings.short_seasons=시즌
+datetimestrings.short_weeks=주
+datetimestrings.short_days=일
 
 # buttons
 button.ok=OK
