--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -88,12 +88,14 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=Gömülü YouTube videoları
 module.EmbedMedia.EmbedVimeoVideos.desc=Vimeo videolarını ekle
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=FunnyOrDie videolarını ekle
 module.EmbedMedia.EmbedDailymotionVideos.desc=Dailymotion videolarını ekle
+module.EmbedMedia.EmbedModeOEmebed.desc=gömülü medya için oEmbed kullan (Sadece Firefox ve Chrome)
 module.EmbedMedia.ReplaceLinksByTitles.desc=Link metinin medya öğesinin etiketiyle değiştir, örneğin görüntü adı
 module.EmbedMedia.EmbedSoundCloud.desc=Soundcloud ekle
 module.EmbedMedia.EmbedFlickrImages.desc=Flickr görüntülerini ekle
 module.EmbedMedia.EmbedDeviantArtImages.desc=Deviantart dosyalarını ekle
 module.EmbedMedia.EmbedGenericImages.desc=Eğer link bir görüntü linkiyse, görüntüleri ekle
 module.EmbedMedia.EmbedGenericImagesClever.desc=Orjinal link bir görüntüyü göstermiyor olsa bile doğru görüntü adresini tahmin et.
+module.EmbedMedia.EmbedImageshack.desc=ImageShack ikonlarını genişlet(sadece Firefox ve Chrome)
 #Forum direct page links
 module.DirectPageLinks.desc=Forum başlıklarındaki belli bir sayfaya atlayabilmek için link ekler.
 #
@@ -254,7 +256,9 @@ module.ContextMenuCopy.HtMl.desc=Seçilen içeriği HT-ML formatında kopyalamak
 module.ContextMenuCopy.Table.desc=Tabloyu HT-ML formatında kopyalamak için seçenek
 module.NewMail.desc=Yeni ileti ve forum mesajı sayısını vurgula
 module.NewMail.NotifyMail.desc=Eğer yeni bir ileti gelirse, bildirim mesajı göster
+module.NewMail.NotifyMailSound.desc=Yeni posta sesi
 module.NewMail.NotifyForum.desc=Eğer yeni bir forum cevabı gelirse, bildirim mesajı göster
+module.NewMail.NotifyForumSound.desc=Yeni forum cevabında sesle bildirim
 module.CopyYouth.desc=Altyapı raporları ve kaynakları için kopyalama fonksiyonu
 module.CopyYouth.TrainingReport.desc=Antrenman raporu
 module.CopyYouth.ScoutComment.desc=Gözcü yorumu
@@ -271,6 +275,7 @@ module.LeagueNewsFilter.lineup_changes.desc=Sadece kadro değişikliklerini gös
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Bölge sayfasında online olan kullanıcıları üste taşır. Dikkat\! Eğer online kullanıcı sayısı 100 ü geçerse bu seçenek çok yavaşlar.
 module.TeamPopupLinks.desc=Bir takım-id linki'ne imleci getirdiğinizde , çabuk linkler barındıran küçük açılır bir pencere gösterir.
+module.TeamPopupLinks.TeamHighlight.desc=Tablolardaki seçili takımı vurgula
 module.TeamPopupLinks.TeamLinks.desc=takım linklerine bağlantı ekle
 module.TeamPopupLinks.UserLinks.desc=Menajer linkleri bağlantılar ekle
 module.TeamPopupLinks.Manager.desc=Menejer (sadece takım bağlantıları için)
@@ -288,6 +293,7 @@ module.TeamPopupLinks.LastLineup.desc=Son diziliş
 module.TeamPopupLinks.NextMatch.desc=Sonraki maç
 module.TeamPopupLinks.AddNextMatch.desc=Gelecek maçı HT Live'e ekler
 module.TeamPopupLinks.YouthMatches.desc=Paf maçları
+module.TeamPopupLinks.Tournaments.desc=Turnuvalar
 module.TeamPopupLinks.Coach.desc=Koç
 module.SkillColoring.desc=Yeteneklerinin daha iyi görselleştirilmesi
 module.SkillColoring.skill_color.desc=Yetenekleri renklendirir
@@ -371,23 +377,33 @@ module.MatchSimulator.desc=Maç talimatları arayüzüne, maç simulatörü ekle
 module.MatchSimulator.RatingsOnTop.desc=Değer tahminini yukarıda tutar
 module.MatchSimulator.RatingsBelow.desc=Tahmini aşağıda göster
 module.MatchSimulator.RatingsRight.desc=Tahmini sağda görüntüler
+module.MatchSimulator.HTMSPrediction.desc=HTMS tahmini ekle
 module.HeaderToggle.desc=H2-başlıklarına tıklamak bir sonraki bölümü gösterir/gizler. Son ayarları kendiliğinden sayfanın türüne ve başlığa göre hatırlar.
 module.Filter.desc=Iyi oyuncuları sayfasına filtreler ekler
 module.RatingsDisplay.desc=Ortalama değerleri farklı şekilde gösterir
 module.RatingsDisplay.DenominationsRange.desc=0-20 aralığı içinde
 module.RatingsDisplay.HatStats.desc=HatStats
+module.RatingsDisplay.HTSums.desc=Toplu Hattrick reytingleri olarak
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Youth-Twins
+YouthTwins.possibleTwins=Bu oyuncunun %1 olası ikizi var.;Bu oyuncu, %1 olası ikizleri var.
+YouthTwins.markedTwins=İkiz olarak işaretlenmiş\: %1
+YouthTwins.undecidedTwins=Henüz işaretlenmemiş\: %1
 
 #PlayerStatsExperience
+PlayerStatsExperience.ExperienceChange.title=Tecrübe kazanımı
+PlayerStatsExperience.ExperienceChange.title.abbr=XP +
 
 #Series statistics
+rating.average=Ortalama reyting
 
 #Save for work
+SafeForWork.title=Başlık
+SafeForWork.icon=Simge
 
 #Extrashortcuts
 ExtraShortcuts.statistics=İstatistikler
@@ -415,8 +431,14 @@ YouthPromotes.future=Oyuncu %1 gün sonra, %2 tarihinde yükseltilebilir; Oyuncu
 YouthPromotes.today=Oyuncu bugün terfi edebilir\!
 
 #teamstats+filters
-TeamStats.boxheader=Takım genel bakış
+TeamStats.boxheader=Takıma genel bakış
 TeamStats.General=Genel
+TeamStats.Attributes=Davranışlar
+TeamStats.Skills=Yetenekler
+TeamStats.Players=Oyuncular
+TeamStats.Total=Toplam
+TeamStats.Selected=Seçili
+TeamStats.Average=Ortalama
 TeamStats.PlayerNotToOld=Oyuncular < 19 yıl
 TeamStats.PlayerToOld=Oyuncular >\= 19 yıl 
 TeamStats.Cards=kartlar
@@ -425,7 +447,7 @@ TeamStats.TransferListed=Transfer-listelenen
 TeamStats.Pictures=Yüzler
 TeamStats.PlayedLatest=Son maçta oynadı
 TeamStats.NotPlayedLatest=Son maçta oynamadı
-TeamStats.NotTransferListed=Transfer-listelenen değil
+TeamStats.NotTransferListed=Transfer listesinde değil
 TeamStats.ActivePlayers=Aktif oyuncular
 TeamStats.HomeGrownPlayers=Takımda yetişmiş oyuncular
 TeamStats.PurchasedPlayers=Satın alınan oyuncular
@@ -470,10 +492,11 @@ ExtraPlayerInfo.defensiveTrainer=Defans oynatmayı seven %s bir antrenör
 ExtraPlayerInfo.offensiveTrainer=Atak futbolu seven %s bir antrenör
 ExtraPlayerInfo.balancedTrainer=Atak yada defans düşünmeyen %s bir antrenör
 ManagerButtons.writeInGuestbook=Ziyaretçi defterine yazmak
+LineupShortcut.lineup=Diziliş
 ShowFriendlyBooked.ShowFriendlies=Hazırlık maçlarını göster
 
 #Transfer prices
-MedianTransferPrice.median=Ortalama fiyat
+MedianTransferPrice.median=Ortanca fiyat
 MedianTransferPrice.average=Ortalama fiyat
 
 #forum
@@ -541,6 +564,7 @@ Filters.ok=Ok
 Filters.clear=Sil
 Filters.noFilter=Filtre yok
 Filters.none=Hiçbiri
+Filters.Attributes=Davranış filtreleri
 Filters.days=Günler
 Filters.tsi=TSI
 Filters.stamina=Kondisyon
@@ -550,6 +574,10 @@ Filters.specialty=Özellik
 Filters.stars=Yıldızlar
 Filters.minimum=En Az
 Filters.maximum=Maksimum
+Filters.over=Üzerinden
+Filters.under=Altında
+Filters.equal=Eşittir
+Filters.notEqual=Eşit değildir
 
 
 match.type.league=Lig
@@ -572,7 +600,17 @@ matchOrder.swapPositions=Pozisyonları değiştir
 matchOrder.options=Seçenekler
 matchOrder.staminaDiscount=Kondisyon etkisi
 matchOrder.staminaDiscount.title=Bölge reytingleri, oyuncuların o bölgeye olan katkısına göre kesildi
+matchOrder.attVsDef=Atak & Defans
 matchOrder.summary=Özet
+matchOrder.tournamentMatch=Turnuva
+matchOrder.homeAway=Otomatik algılama, ev sahibi takımı ya da Deplasman takımını ekle?
+matchOrder.homeAway.abbr=E/D
+matchOrder.default=Varsayılan
+matchOrder.default.abbr=V
+matchOrder.home=Ev sahibi
+matchOrder.home.abbr=E
+matchOrder.away=Deplasman
+matchOrder.away.abbr=D
 
 #Skills
 Playmaking=Oyunkuruculuk
@@ -878,6 +916,7 @@ NextMatch=Sonraki maç
 AddNextMatch=sonraki maçı HT Live a ekle
 LastLineup=Son diziliş
 YouthMatches=Genç maçları
+Tournaments=Turnuvalar
 more=daha fazla...
 less=daha az...
 
@@ -898,8 +937,8 @@ TransferSearchResultFilters.hideSuspended=Cezalıları gizle
 TransferSearchResultFilters.days=Gün\:
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-RapidId.view=Görünüm
-RapidId.viewById=ID'ye göre görünüm
+RapidId.view=Arama
+RapidId.viewById=ID ile Arama
 RapidId.senior=As
 RapidId.youth=genç
 RapidId.tournaments=Turnuvalar
@@ -979,7 +1018,7 @@ team.status.booked=hazırlık maçı ayarlandı
 #next 6 use pluralFroms
 datetimestrings.days=gün;günler
 datetimestrings.hours=sa;saatler
-datetimestrings.minutes=dakika; dakikalar
+datetimestrings.minutes=dk;dk
 datetimestrings.short_seasons=sezon; sezonlar
 datetimestrings.short_weeks=hafta;haftalar
 datetimestrings.short_days=gün;günler
@@ -1028,6 +1067,7 @@ exception.error=Hata\: %s
 
 log.header=FoxTrick günlüğü
 # keep the following line untranslated
+log.env=versiyon %1, %2 platformu, %3 yerel, %4 düzeni, %5 yönü
 
 ReadHtPrefs.HTLanguageChanged=FoxTrick dil ayarını değiştirdiğinizi algıladı. Dil ayarınız şu an %s  olmuştur.
 
@@ -1048,6 +1088,10 @@ TeamPopupLinks.OpenNewTab=Yeni sekmede aç
 
 #toolbar
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Geçici olarak devre dışı bırak
+toolbar.featureHighlight=Özellikleri vurgula
+toolbar.translationKeys=Çeviri anahtarlarını göster
+toolbar.preferences=Tercihler
 status.active=etkin
 status.enabled=etkin, ancak %s üzerinde etkin değil
 status.disabled=devre dışı
@@ -1107,6 +1151,9 @@ prefs.loadSave.import.notice=Metin alanındaki kaydedilmiş seçenekleri yapış
 prefs.additional.title=Genel Seçenekler
 prefs.additional.xmlLoad=Hattrick'ten daha fazla bilgi için XML'leri yükle
 prefs.additional.smallCopyIcons=Kopyalama simgelerini kenar çubuğu'nun yerine başlıkta göster
+prefs.additional.anstoss2Icons=Özel yetenekler için Anstoss2 simgelerini kullan
+prefs.additional.featureHighlight=FoxTrick özelliklerini vurgula
+prefs.additional.translationKeys=Çeviriler yerine çeviri tuşlarını göster
 prefs.additional.HTMLDebugLog=FoxTrick günlüğünü sayfaların alt tarafında göster(hata ayıklama için)
 
 prefs.feedback.saved=Tercihler kaydedildi\!
@@ -1126,6 +1173,7 @@ link.recentChanges=Güncel değişiklikler
 
 releaseNotes.show=Her güncellemeden sonra sürüm notlarını göster
 releaseNotes.showFor=Şu versiyon için sürüm notlarını göster\:
+releaseNotes.version=Versiyon\:
 
 about.copyright=Telif hakkı
 about.maintainers=Derecelendiriciler
